# chatty_audio_service

./: .gitignore  Cargo.toml  Dockerfile
src/: app.rs  lib.rs  main.rs
src/constants/: audio_constant.rs
src/helper/: audio_codec.rs  config.rs
src/routes/: audio.rs
