[package]
name = "chatty_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6" }
base64 = { version = "0.22.1" }
block-modes = { version = "0.8.1" }
des = { version = "0.7.0" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
